dashboard, consultant- interviews,  consultant-submissions and banter-report changes

--- a/src/app/usit/components/consultant-components/consultant-submissions/consultant-submissions.component.html
+++ b/src/app/usit/components/consultant-components/consultant-submissions/consultant-submissions.component.html
@@ -115,7 +115,7 @@
                 <!-- table columns ends  -->
                 <!-- table ROW -->
                 <tr mat-header-row *matHeaderRowDef="dataTableColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: dataTableColumns;" [ngStyle]="getRowStyles(row)"></tr>
+                <tr mat-row *matRowDef="let row; columns: dataTableColumns;"></tr>
             </table>
             <p class="no-data-found" *ngIf="!dataSource.filteredData.length">{{'No matching data found'}}</p>
         </section>
