--- a/src/app/usit/components/consultant-components/consultant-submissions/consultant-submissions.component.scss
+++ b/src/app/usit/components/consultant-components/consultant-submissions/consultant-submissions.component.scss
@@ -211,6 +211,10 @@ td.approve-buttons.cdk-cell.cdk-column-Approve-Reject.mat-column-Approve-Reject.
     height: 30px !important;
 }
 
+.mat-mdc-row {
+    height: 30px !important;
+}
+
 .filter-button {
     width: fit-content;
     height: 25px;
