--- a/src/app/usit/components/dashboard/dashboard.component.scss
+++ b/src/app/usit/components/dashboard/dashboard.component.scss
@@ -100,7 +100,7 @@ ul.breadcrumb li a:hover {
     height: 100%;
   }
 
-  .mat-mdc-card.activity-card-individual {
+  .mat-mdc-card.activity-card-employee {
     height: inherit;
     padding: 15px;
     overflow-y: auto;
