--- a/src/app/components/register-consultant/register-consultant.component.scss
+++ b/src/app/components/register-consultant/register-consultant.component.scss
@@ -44,6 +44,9 @@
   .header-no-padding {
     padding: 0;
     text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 32px;
   }
   
   .no-padding {
@@ -252,7 +255,7 @@
 }
 
 .login-form{
-  height: calc(100% - 220px);
+  height: 100%;
   overflow: auto;
 }
 
