--- a/src/app/components/register-consultant/register-consultant.component.scss
+++ b/src/app/components/register-consultant/register-consultant.component.scss
@@ -1,231 +1,119 @@
 .login-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    background: url('../../../assets/images/login-background.jpg') center no-repeat;
-    background-size: cover;
-  
-  }
-  
-  // .login-card {
-  //   width: 100%;
-  //   max-width: 450px;
-  //   text-align: center;
-  //   background-color: rgb(255, 255, 255);
-  //   padding: 16px;
-  // }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: url("../../../assets/images/login-background.jpg") center
+    no-repeat;
+  background-size: cover;
+}
 
-  .login-card {
-    margin: 0 auto;
-    padding: 16px;
-    height: 80vh;
-    width: 800px;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-  }
-  
-  .login-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .center-text {
-    text-align: center;
-    margin-bottom: 16px; 
-  }
-  
-  .center-logo {
-    text-align: center;
-  }
-  
-  .header-no-padding {
-    padding: 0;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 32px;
-  }
-  
-  .no-padding {
-    padding: 0 0;
-    height: auto;
-    // overflow: auto;
-  }
-  
-  .mat-mdc-card-content:last-child {
-    padding-bottom: 0px;
-  }
-  
-  .full-width {
-    width: 100%;
-  }
-  
-  .login-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .forgot-password {
-    text-align: right;
-    margin-top: 16px;
-  }
-  
-  .login-button {
-    margin-top: 16px;
-  }
-  
-  img{
-    width: 200px;
-    height: auto;
-  }
-  
-  mat-card-header{
-    display: block;
-  }
-  
-  .create-account{
-    margin-top: 20px;
-  }
-  
-  a{
-    text-decoration: none;
-  }
-  
-  ::ng-deep .green-snackbar .mat-snack-bar-container {
-    background-color: green;
-    color: white;
-  }
-  
-  ::ng-deep .red-snackbar .mat-snack-bar-container {
-    background-color: red;
-    color: white;
-  }
-  
-  .mat-form-field{
-    margin-bottom: 5px;
-  }
-  
-  mat-error{
-    font-size: 12px;
-  }
-  
-  .custom-tabs .mat-tab-header {
-    background-color: red;
-  }
-  
-  .custom-tabs .mat-tab-label {
-    color: white;
-  }
+.login-card {
+  margin: 0 auto;
+  padding: 16px;
+  height: 80vh;
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
 
-  /**** TEL INPUT   - STARTS ****/
-// .country-selector {
-//   opacity: 1 !important;
-//   bottom: 8px !important;
-// }
+.login-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
-// input:not(.country-search) {
-//   bottom: 3px;
-//   left: 10px;
-// }
+.center-text {
+  text-align: center;
+  margin-bottom: 16px;
+}
 
-// ::ng-deep input .country-search {
-//   width: 90%;
-//   border: none;
-//   border-bottom: 1px solid #f2f0f0;
-//   font-size: 14px;
-//   padding: 10px 10px !important;
-// }
+.center-logo {
+  text-align: center;
+}
 
-// .country-list-button {
-//   font-size: 0.8rem !important;
-// }
+.header-no-padding {
+  padding: 0;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 32px;
+}
 
-// .mat-mdc-menu-content:not(:empty) {
-//   max-height: 250px !important;
-// }
+.no-padding {
+  padding: 0 0;
+  height: auto;
+}
 
-// mat-mdc-menu-content {
-//   max-height: 250px !important;
-// }
+.mat-mdc-card-content:last-child {
+  padding-bottom: 0px;
+}
 
-// ::ng-deep .custom-intl-input .mat-mdc-menu-panel .ngx-mat-tel-input-mat-menu-panel {
-//   max-height: 250px !important;
-// }
+.full-width {
+  width: 100%;
+}
 
-// ::ng-deep .intl-input .mdc-button .mdc-button__label {
-//   margin-top: 15px;
-// }
+.login-form {
+  display: flex;
+  flex-direction: column;
+}
 
-// ::ng-deep .ngx-mat-tel-input-mat-menu-panel {
-//   max-height: 280px !important;
-// }
+.forgot-password {
+  text-align: right;
+  margin-top: 16px;
+}
 
-// ::ng-deep .country-search {
-//   width: calc(100% - 10px) !important;
-//   padding: 4px !important;
-// }
+.login-button {
+  margin-top: 16px;
+}
 
-// ::ng-deep .country-list-button {
-//   padding: 0px 4px !important;
-// }
-/**** TEL INPUT   - ENDS ****/
+img {
+  width: 200px;
+  height: auto;
+}
 
-/**** UPLOAD DOCUMENTS - STARTS ****/
+mat-card-header {
+  display: block;
+}
 
-// HEADER
-// .header-upload-documents {
-//   display: flex;
-//   height: 48px;
-//   background-color: whitesmoke;
-//   align-items: center;
-//   margin: 0px 2px 10px 6px;
-// }
+.create-account {
+  margin-top: 20px;
+}
 
-// .header-upload-text {
-//   margin-left: 4px;
-//   font-weight: 400;
-//   font-size: larger;
-// }
+a {
+  text-decoration: none;
+}
 
+::ng-deep .green-snackbar .mat-snack-bar-container {
+  background-color: green;
+  color: white;
+}
 
-// .upload-doc-cotainer {
-//   display: flex;
-//   flex-direction: row;
-// }
+::ng-deep .red-snackbar .mat-snack-bar-container {
+  background-color: red;
+  color: white;
+}
+
+.mat-form-field {
+  margin-bottom: 5px;
+}
+
+mat-error {
+  font-size: 12px;
+}
+
+.custom-tabs .mat-tab-header {
+  background-color: red;
+}
+
+.custom-tabs .mat-tab-label {
+  color: white;
+}
 
 .upload-inp-container {
   display: flex;
 }
-
-// .upload-doc-left {
-//   width: 50%;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-// }
-
-// .upload-doc-right {
-//   width: 50%;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-// }
-
-// .upload-doc-cotainer .upload-doc-left .mat-mdc-form-field {
-//   width: 95%;
-// }
-
-// .upload-doc-cotainer .upload-doc-right .mat-mdc-form-field {
-//   width: 99%;
-// }
-
-// .upload {
-//   width: 100%;
-// }
-/**** UPLOAD DOCUMENTS - ENDS ****/
 
 .select-technology-field {
   width: 100%;
@@ -233,7 +121,7 @@
 }
 
 ::ng-deep .login-form .password .mat-mdc-form-field-error-wrapper {
-  position: relative; 
+  position: relative;
   top: 0;
   left: 0;
   right: 0;
@@ -254,7 +142,7 @@
   align-items: center;
 }
 
-.login-form{
+.login-form {
   height: 100%;
   overflow: auto;
 }
@@ -264,11 +152,13 @@
   padding-top: 16px;
 }
 
-.form .form-column-left  .mat-mdc-form-field, .form .form-column-right .mat-mdc-form-field {
+.form .form-column-left .mat-mdc-form-field,
+.form .form-column-right .mat-mdc-form-field {
   width: 80%;
 }
 
-.form .form-column-left button, .form .form-column-right button {
+.form .form-column-left button,
+.form .form-column-right button {
   width: 80%;
 }
 
@@ -293,8 +183,8 @@
   align-items: center;
 }
 
-.only-email-otp-login-form{
- height: auto;
+.only-email-otp-login-form {
+  height: auto;
 }
 
 .only-email-form {
