--- a/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-interview-report/consultant-all-interview-report.component.html
+++ b/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-interview-report/consultant-all-interview-report.component.html
@@ -9,7 +9,7 @@
     </div>
 
     <div class="row" oncopy="return false" onpaste="return false" oncut="return false"
-        style="height: 700px; overflow: auto">
+        style="max-height: 700px; overflow: auto">
         <table class="table table-light table-bordered">
             <thead class="thead-light sticky">
                 <tr>
