--- a/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-submission-report/consultant-all-submission-report.component.html
+++ b/src/app/usit/components/consultant-components/consultant-all-report/consultant-all-submission-report/consultant-all-submission-report.component.html
@@ -18,7 +18,7 @@
       oncopy="return false"
       onpaste="return false"
       oncut="return false"
-      style="height: 700px; overflow: auto"
+      style="max-height: 700px; overflow: auto"
     >
       <table class="table table-light table-bordered">
         <thead class="thead-light sticky">
