--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     <span class="button-divider"></span>
     <button mat-icon-button [matMenuTriggerFor]="menuNotification"
       *ngIf="department !== 'Consultant' && role !== 'Employee' ">
-      <mat-icon [matBadge]="unseenNotificationCount" matBadgeColor="warn">notifications</mat-icon>
+      <mat-icon [matBadge]="unseenNotificationCount" matBadgeColor="warn" aria-hidden="false">notifications</mat-icon>
     </button>
     <mat-menu #menuNotification="matMenu" xPosition="before" class="custom-notification-menu">
       <button mat-menu-item *ngFor="let notification of notificationArr"
