--- a/src/app/usit/components/people/terminated/terminated.component.html
+++ b/src/app/usit/components/people/terminated/terminated.component.html
@@ -21,20 +21,20 @@
                 <!--- Note that these columns can be defined in any order.
                 The actual rendered columns are set as a property on the row definition" -->
 
-                <!-- SNo Column mat-sort-header-->
+                <!-- Serial Number -->
                 <ng-container matColumnDef="SerialNum">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Serial Number">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by SerialNum">
                         S.No </th>
                     <td mat-cell *matCellDef="let element"> {{element?.serialNum}} </td>
                 </ng-container>
 
-                <!-- Emp ID-->
+                <!-- Emp ID -->
                 <ng-container matColumnDef="EmpId">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by EmpId" mat-sort-header> Emp Id </th>
                     <td mat-cell *matCellDef="let element">{{element?.empid}}</td>
                 </ng-container>
                 
-                <!-- Date-->
+                <!-- Date -->
                 <ng-container matColumnDef="Name">
                     <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Name" mat-sort-header> Name
                     </th>
@@ -45,49 +45,25 @@
                         </span> -->
                     </td>
                 </ng-container>
-                <!-- ID-->
-                <ng-container matColumnDef="Employer">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by Employer" mat-sort-header> Employer </th>
-                    <td mat-cell *matCellDef="let element">
-                       {{element?.companyname | titlecase}}
-                    </td>
-                </ng-container>
-                <!-- Name-->
+
+                <!-- Visa-->
                 <ng-container matColumnDef="Visa">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Visa" mat-sort-header> Visa </th>
                     <td mat-cell *matCellDef="let element" nowrap>{{element?.visa_status }} </td>
                 </ng-container>
 
-                <!-- Track(S/I)-->
+                <!-- DOJ -->
                 <ng-container matColumnDef="DOJ">
                     <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by DOJ" mat-sort-header> DOJ </th>
                     <td mat-cell *matCellDef="let element">{{element?.doj}} </td>
                 </ng-container>
 
-                <!-- PayType-->
-                <ng-container matColumnDef="PayType">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by PayType" mat-sort-header>
-                        Pay Type </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.paytype}}
-                    </td>
-                </ng-container>
-
-                <!-- Employement Type-->
-                <ng-container matColumnDef="EmployementType">
-                    <th mat-header-cell *matHeaderCellDef 
-                        sortActionDescription="Sort by EmployementType" mat-sort-header>
-                        Employement Type </th>
-                    <td mat-cell *matCellDef="let element"> {{element?.employeementype}}
-                    </td>
-                </ng-container>
-
-                <!-- State of Emp-->
-                <ng-container matColumnDef="StateofEmp">
-                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by StateofEmp" mat-sort-header> State of Emp </th>
+                <!-- Physical Address -->
+                <ng-container matColumnDef="PhysicalAddress">
+                    <th mat-header-cell *matHeaderCellDef  sortActionDescription="Sort by PhysicalAddress" mat-sort-header> Physical Address </th>
                     <td mat-cell *matCellDef="let element"> {{element?.stateofworking}}
                     </td>
                 </ng-container>
-            
 
                 <!-- Status Column -->
                 <ng-container matColumnDef="Status">
@@ -100,12 +76,12 @@
                 <!-- Action Column -->
                 <ng-container matColumnDef="Action">
                     <th mat-header-cell *matHeaderCellDef> Action </th>
-                    <td mat-cell *matCellDef="let interview">
+                    <td mat-cell *matCellDef="let element">
                         <span class="action-buttons" >
-                            <button mat-icon-button (click)="editActive(interview)" class="action-button-ed">
+                            <button mat-icon-button (click)="editActive(element)" class="action-button-ed">
                                 <mat-icon class="edit-icon">edit</mat-icon>
                             </button>
-                            <button mat-icon-button (click)="deleteInterview(interview)" class="action-button-ed">
+                            <button mat-icon-button (click)="deleteActive(element)" class="action-button-ed">
                                 <mat-icon  class="delete-icon">delete</mat-icon>
                             </button>
                         </span>
