--- a/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.scss
+++ b/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.scss
@@ -16,7 +16,7 @@
 .mat-column-SerialNum,
 .mat-column-Dos,
 .mat-column-HeadQuarter,
-.mat-column-Id,
+.mat-column-submissionId,
 .mat-column-Consultant,
 .mat-column-TrackSI,
 .mat-column-Requirement,
