--- a/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.html
+++ b/src/app/usit/components/dashboard/emp-submissions-list/emp-submissions-list.component.html
@@ -34,13 +34,13 @@
                   </td>
               </ng-container>
               <!-- Name-->
-              <ng-container matColumnDef="Consultant">
+              <!-- <ng-container matColumnDef="Consultant">
                   <th mat-header-cell *matHeaderCellDef sortActionDescription="Sort by Consultant" mat-sort-header>
                       Consultant </th>
                   <td mat-cell *matCellDef="let element">
                       {{element?.consultantname|titlecase}}
                   </td>
-              </ng-container>
+              </ng-container> -->
                
               <!-- Requirement-->
               <ng-container matColumnDef="Requirement">
