--- a/src/app/usit/components/masters/companies-list/companies-list.component.html
+++ b/src/app/usit/components/masters/companies-list/companies-list.component.html
@@ -39,6 +39,24 @@
           <td mat-cell *matCellDef="let element"> {{ element.companyname }} </td>
         </ng-container>
 
+        <!-- Domain Column -->
+        <ng-container matColumnDef="Domain">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Domain"> Domain </th>
+          <td mat-cell *matCellDef="let element"> {{ element.domain }} </td>
+        </ng-container>
+
+        <!-- Code Column -->
+        <ng-container matColumnDef="Code">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by Company"> Code </th>
+          <td mat-cell *matCellDef="let element"> {{ element.code }} </td>
+        </ng-container>
+
+        <!-- Added By Column -->
+        <ng-container matColumnDef="AddedBy">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by AddedBy"> Added By </th>
+          <td mat-cell *matCellDef="let element"> {{ element.addedby }} </td>
+        </ng-container>
+
         <!-- actions -->
         <ng-container matColumnDef="Actions">
           <th mat-header-cell *matHeaderCellDef> Action </th>
