--- a/src/app/usit/components/masters/companies-list/companies-list.component.html
+++ b/src/app/usit/components/masters/companies-list/companies-list.component.html
@@ -54,7 +54,7 @@
         <!-- Added By Column -->
         <ng-container matColumnDef="AddedBy">
           <th mat-header-cell *matHeaderCellDef mat-sort-header sortActionDescription="Sort by AddedBy"> Added By </th>
-          <td mat-cell *matCellDef="let element"> {{ element.addedby }} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.psuedoname }} </td>
         </ng-container>
 
         <!-- actions -->
