--- a/src/app/usit/components/masters/companies-list/companies-list.component.scss
+++ b/src/app/usit/components/masters/companies-list/companies-list.component.scss
@@ -33,7 +33,6 @@ thead {
 }
 
 .mat-column-Company {
-  width: 95%;
   border-right: 1px solid lightgray;
   padding-right: 24px;
 }
@@ -46,17 +45,13 @@ thead {
   border-right: 1px solid lightgray;
 }
 
-.mat-column-Actions {
-  width: max-content;
-}
-
 .company-header-container {
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   height: 48px;
-  background-color: white;
+  background-color: rgb(228, 231, 234);
   z-index: 99999;
   top: 0;
   overflow: hidden;
@@ -165,4 +160,54 @@ ul.breadcrumb li a:hover {
 .edit-icon,
 .delete-icon {
   color: rgb(99, 98, 98);
+}
+
+.company-list-table-style {
+  width: 100%;
+  overflow: auto;
+  display: block;
+}
+
+::ng-deep .mat-mdc-paginator {
+  display: block;
+  line-height: var(--mat-paginator-container-text-line-height);
+  font-size: var(--mat-paginator-container-text-size);
+  font-weight: var(--mat-paginator-container-text-weight);
+  letter-spacing: var(--mat-paginator-container-text-tracking);
+}
+
+:host ::ng-deep.mat-paginator .mat-paginator-container{
+  height: 36px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-button-persistent-ripple.mdc-icon-button__ripple {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-focus-indicator {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-touch-target {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button mat-mdc-tooltip-trigger mat-mdc-paginator-navigation-first mdc-icon-button mat-mdc-icon-button mat-unthemed mat-mdc-button-base mat-mdc-tooltip-disabled ng-star-inserted {
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button .mat-mdc-button-base {
+  padding: 0px !important;
+  height: 24px;
+  width: 24px;
+}
+
+::ng-deep .mat-mdc-paginator .mat-mdc-icon-button {
+  padding: 0px !important;
+  height: 24px;
+  width: 24px;
 }
