--- a/src/app/usit/components/people/immigrant-info/immigrant-info.component.html
+++ b/src/app/usit/components/people/immigrant-info/immigrant-info.component.html
@@ -1,103 +1,153 @@
-<section class="header-container" id="mainHeader">
-    <span class="header-text" mat-dialog-title id="mainHeaderTitle">
-        {{data.title | titlecase}}
+<section class="header-container">
+    <span class="header-text" mat-dialog-title>
+        {{data.imginfo.employeename | titlecase}}
     </span>
-    <button mat-icon-button (click)="dialogRef.close()" class="btn-close" id="btnClose">
-        <mat-icon>close</mat-icon>
-    </button>
 </section>
 <mat-card class="card mat-elevation-z8">
     <mat-card-content class="card-content">
         <div class="info-container">
             <div class="info-item">
                 <span class="static-label" style="color: grey">Contact Number: </span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.contactnumber}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.contactnumber ?? '-'}}</span>
             </div>
             <div class="info-item">
                 <span class="static-label" style="color: grey">Email :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.email}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.email ?? '-'}}</span>
             </div>
             <div class="info-item">
                 <span class="static-label" style="color: grey">Location :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.location}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.location ?? '-'}}</span>
             </div>
             <div class="info-item">
                 <span class="static-label" style="color: grey">Date of Joining :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.doj}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.doj ?? '-'}}</span>
             </div>
             <div class="info-item">
                 <span class="static-label" style="color: grey">Employment Type :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.employeementype}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.employeementype ?? '-'}}</span>
             </div>
             <div class="info-item">
                 <span class="static-label" style="color: grey">State of Working :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.stateofworking}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.stateofworking ?? '-'}}</span>
             </div>
             <div class="info-item">
                 <span class="static-label" style="color: grey">Pay Type :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.paytype}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.paytype ?? '-'}}</span>
             </div>
             <div class="info-item">
                 <span class="static-label" style="color: grey">Visa :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.visa}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.visa ?? '-'}}</span>
             </div>
-           
+        
             <div class="info-item">
                 <span class="static-label" style="color: grey">H1 Valid From :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.h1validfrom}}</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.h1validfrom ?? '-'}}</span>
             </div>
             <div class="info-item">
-                <span class="static-label" style="color: grey"> H1 Valid To :</span>
-                <span class="dynamic-value" style="font-weight: bold;">{{dataSource.h1validto}}</span>
+                <span class="static-label" style="color: grey">H1 Valid To :</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.h1validto ?? '-'}}</span>
+            </div>
+        
+            <div class="info-item">
+                <span class="static-label" style="color: grey">GC Status :</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.gcstatus ?? '-'}}</span>
+            </div>
+            
+            <div class="info-item">
+                <span class="static-label" style="color: grey">Receipt Number :</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.receiptnumber ?? '-'}}</span>
+            </div>
+
+            <div class="info-item">
+                <span class="static-label" style="color: grey">E-verify Date :</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.everifydate ?? '-'}}</span>
+            </div>
+
+            <div class="info-item">
+                <span class="static-label" style="color: grey">Last I9 Date :</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.lasti9date ?? '-'}}</span>
+            </div>
+
+            <div class="info-item">
+                <span class="static-label" style="color: grey">Petitioner :</span>
+                <span class="dynamic-value" style="font-weight: bold;">{{dataSource?.petitioner ?? '-'}}</span>
             </div>
 
             <div class="header-container-upload-documents">
-                <span class="header-text">List Documents</span>
-              </div>
-              <div class="list-documents-table-container">
+                <span class="doc-header-text">Documents List</span>
+            </div>
+            <div class="list-documents-table-container">
                 <table>
-                  <tr>
-                    <th>Document Name</th>
+                    <tr>
+                        <th>Document Name</th>
+                        <th>Action</th>
+                    </tr>
+                    <tr *ngIf="!(dataSource?.passportdoc || dataSource?.everifydoc || dataSource?.i9doc || (filesArr?.length > 0) || dataSource?.i94doc || dataSource?.ssndoc)">
+                        <td colspan="2" style="text-align: center;">No data found</td>
+                    </tr>
+                    <tr>
+                        <td *ngIf="dataSource && dataSource.passportdoc !== null">{{dataSource.passportdoc}}</td>
+                        <td *ngIf="dataSource && dataSource.passportdoc !== null">
+                            <button mat-icon-button type="button" class="action-button-ed"
+                            (click)="downloadfile(dataSource.applicantid,dataSource.passportdoc,'passportdoc')">
+                              <mat-icon>file_download</mat-icon>
+                            </button>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td *ngIf="dataSource && dataSource.everifydoc !== null">{{dataSource.everifydoc}}</td>
+                        <td *ngIf="dataSource && dataSource.everifydoc !== null">
+                            <button mat-icon-button type="button" class="action-button-ed"
+                            (click)="downloadfile(dataSource.applicantid,dataSource.everifydoc,'everifydoc')">
+                              <mat-icon>file_download</mat-icon>
+                            </button>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td *ngIf="dataSource && dataSource.i9doc !== null">{{dataSource.i9doc}}</td>
+                        <td *ngIf="dataSource && dataSource.i9doc !== null">
+                            <button mat-icon-button type="button" class="action-button-ed"
+                            (click)="downloadfile(dataSource.applicantid,dataSource.i9doc,'i9doc')">
+                              <mat-icon>file_download</mat-icon>
+                            </button>
+                        </td>
+                    </tr>
+
+                    <tr *ngIf="filesArr !== null">
+                        <ng-container *ngFor="let data of filesArr">
+                            <td *ngIf="dataSource && dataSource.i797doc !== null">{{data.filename}}</td>
+                            <td *ngIf="dataSource && dataSource.i797doc !== null">
+                                <button mat-icon-button type="button" class="action-button-ed" (click)="downloadMultiplefiles(data)">
+                                    <mat-icon>file_download</mat-icon>
+                                </button>
+                            </td>
+                        </ng-container>
+                    </tr>
                     
-                  </tr>
-          
-                  <tr>
-                    <td *ngIf="dataSource && dataSource.passportdoc !== null "><a class="download-file"
-                        (click)="downloadfile(dataSource.applicantid,dataSource.passportdoc,'passportdoc')">{{dataSource.passportdoc}}</a>
-                    </td>
-                  </tr>
-          
-                  <tr>
-                    <td *ngIf="dataSource && dataSource.everifydoc !== null "><a class="download-file"
-                        (click)="downloadfile(dataSource.applicantid,dataSource.everifydoc,'everifydoc')">{{dataSource.everifydoc}}</a>
-                    </td>
-                  </tr>
-          
-                  <tr>
-                    <td *ngIf="dataSource && dataSource.i9doc !== null "><a class="download-file"
-                        (click)="downloadfile(dataSource.applicantid,dataSource.i9doc,'i9doc')">{{dataSource.i9doc}}</a>
-                    </td>
-                  </tr>
-          
-                  <tr>
-                    <td *ngIf="dataSource && dataSource.i797doc !== null "><a class="download-file"
-                        (click)="downloadfile(dataSource.applicantid,dataSource.i797doc,'i797doc')">{{dataSource.i797doc}}</a>
-                    </td>
-                  </tr>
-          
-                  <tr>
-                    <td *ngIf="dataSource && dataSource.i94doc !==null "><a class="download-file"
-                        (click)="downloadfile(dataSource.applicantid,dataSource.i94doc,'i94doc')">{{dataSource.i94doc}}</a>
-                    </td>
-                  </tr>
-          
-                  <tr>
-                    <td *ngIf="dataSource && dataSource.ssndoc !==null "><a class="download-file"
-                        (click)="downloadfile(dataSource.applicantid,dataSource.ssndoc,'ssndoc')">{{dataSource.ssndoc}}</a>
-                    </td>
-                  </tr>
+
+                    <tr>
+                        <td *ngIf="dataSource && dataSource.i94doc !== null ">{{dataSource.i94doc}}</td>
+                        <td *ngIf="dataSource && dataSource.i94doc !== null ">
+                            <button mat-icon-button type="button" class="action-button-ed"
+                            (click)="downloadfile(dataSource.applicantid,dataSource.i94doc,'i94doc')">
+                              <mat-icon>file_download</mat-icon>
+                            </button>
+                        </td>
+                    </tr>
+
+                    <tr>
+                        <td *ngIf="dataSource && dataSource.ssndoc !== null ">{{dataSource.ssndoc}}</td>
+                        <td *ngIf="dataSource && dataSource.ssndoc !==null ">
+                            <button mat-icon-button type="button" class="action-button-ed"
+                            (click)="downloadfile(dataSource.applicantid,dataSource.ssndoc,'ssndoc')">
+                              <mat-icon>file_download</mat-icon>
+                            </button>
+                        </td>
+                    </tr>
                 </table>
-              </div>
+            </div>
         </div>
     </mat-card-content>
 </mat-card>
