--- a/src/app/usit/components/people/immigrant-info/immigrant-info.component.scss
+++ b/src/app/usit/components/people/immigrant-info/immigrant-info.component.scss
@@ -1,101 +1,140 @@
-/**** POP-UP HEADER - STARTS ****/
 .header-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    height: 48px;
-    background-color: whitesmoke;
-    z-index: 99999;
-    top: 0;
-    overflow: hidden;
-  }
-  
-  .close-btn {
-    overflow: hidden !important;
-  }
-  
-  .header-text {
-    padding-left: 1.3rem;
-    font-weight: 600;
-    font-size: larger;
-  }
-  
-  .card {
-    margin: 0 auto;
-  
-    //height: 80vh;
-    display: flex;
-    flex-direction: column;
-    overflow: hidden;
-  }
-  
-  table {
-    width: 100%;
-  }
-  
-  .mat-mdc-header-row {
-    background-color: rgb(213, 231, 231);
-    position: sticky;
-    top: 0;
-  }
-  
-  .mdc-data-table__cell,
-  .mdc-data-table__header-cell {
-    padding: 0 4px 0 4px;
-  }
-  
-  .mat-mdc-header-row {
-    height: 30px !important;
-  }
-  
-  .mat-mdc-row {
-    height: 30px !important;
-  }
-  
-  thead {
-    position: sticky;
-    top: 0;
-  }
-  
-  .mat-sort-header-arrow {
-    color: #1a1717;
-  }
-  
-  .mat-mdc-column {
-    border-right: 1px solid currentColor;
-  }
-  
-  .mat-column-RecruiterName,
-  .mat-column-PhoneNumber,
-  .mat-column-Email,
-  .mat-column-Address,
-  .mat-column-AddedOn {
-    border-right: 1px solid lightgrey;
-    padding-right: 24px;
-  }
-  
-  .mat-column-RecruiterName {
-    border-left: 1px solid lightgrey;
-  }
-  
-  .company-infor-table {
-    padding: 0 2px;
-    width: 100%;
-    // max-height: calc(100% - 2px);
-    height: 50dvh;
-    overflow: auto;
-    display: block;
-  }
-  
-  .no-data-found {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
-    margin-top: 64px;
-  }
-  
-  .static-label {
-    font-weight: bold;
-  }
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  background-color: rgb(228, 231, 234);
+  z-index: 99999;
+  top: 0;
+  overflow: hidden;
+}
+
+.close-btn {
+  overflow: hidden !important;
+}
+
+.header-text {
+  padding-left: 8px;
+  font-weight: 600;
+  font-size: larger;
+}
+
+.card {
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-mdc-header-row {
+  background-color: rgb(213, 231, 231);
+  position: sticky;
+  top: 0;
+}
+
+.mdc-data-table__cell,
+.mdc-data-table__header-cell {
+  padding: 0 4px 0 4px;
+}
+
+.mat-mdc-header-row {
+  height: 30px !important;
+}
+
+.mat-mdc-row {
+  height: 30px !important;
+}
+
+thead {
+  position: sticky;
+  top: 0;
+}
+
+.mat-sort-header-arrow {
+  color: #1a1717;
+}
+
+.mat-mdc-column {
+  border-right: 1px solid currentColor;
+}
+
+.mat-column-RecruiterName,
+.mat-column-PhoneNumber,
+.mat-column-Email,
+.mat-column-Address,
+.mat-column-AddedOn {
+  border-right: 1px solid lightgrey;
+  padding-right: 24px;
+}
+
+.mat-column-RecruiterName {
+  border-left: 1px solid lightgrey;
+}
+
+.no-data-found {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1rem;
+  margin-top: 64px;
+}
+
+.static-label {
+  font-weight: bold;
+}
+
+.card-content {
+  padding: 8px !important;
+}
+
+.doc-header-text {
+  padding: 16px 0px;
+  font-weight: 600;
+  font-size: larger;
+}
+
+.header-container-upload-documents {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  height: 48px;
+  z-index: 99999;
+  top: 0;
+  overflow: hidden;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+td {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 0px 8px;
+}
+
+th {
+  background-color: #f2f2f2;
+  font-weight: 600 !important;
+}
+
+tr:nth-child(even) {
+  background-color: #f9f9f9;
+}
+
+.action-button-ed{
+  cursor: pointer !important;
+}
