--- a/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
+++ b/src/app/usit/components/vendor-management/vendor-list/vendor-list.component.scss
@@ -134,15 +134,11 @@ tbody {
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-
   height: 48px;
-
   background-color: white;
-  // position: sticky;
-  // z-index: 9999999;
   top: 0;
   overflow: hidden;
-  margin: 4px;
+  // margin: 4px;
   background-color: rgb(228, 231, 234);
 }
 
@@ -158,6 +154,7 @@ tbody {
 .vendor-actions {
   display: flex;
   align-items: center;
+  padding-right: 8px;
 
   input:focus {
     border: solid 2px #3f51b5 !important;
